simple-microservices/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microservices-router
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /employee(/|$)(.*)
            backend:
              serviceName: employee-service
              servicePort: 8080
          - path: /department(/|$)(.*)
            backend:
              serviceName: department-service
              servicePort: 8080
          - path: /organization(/|$)(.*)
            backend:
              serviceName: organization-service
              servicePort: 8080
